--- a/doarSP/AndroidManifest.xml
+++ b/doarSP/AndroidManifest.xml
@@ -35,7 +35,8 @@
         <activity
             android:name="com.app.doarsp.MainActivity"
             android:label="@string/app_name" 
-            android:configChanges="orientation|keyboardHidden|screenSize">
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
