--- a/doarSP/bin/AndroidManifest.xml
+++ b/doarSP/bin/AndroidManifest.xml
@@ -34,7 +34,9 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.app.doarsp.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" 
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
