--- a/doarSP/bin/AndroidManifest.xml
+++ b/doarSP/bin/AndroidManifest.xml
@@ -36,7 +36,8 @@
             android:name="com.app.doarsp.MainActivity"
             android:label="@string/app_name" 
             android:configChanges="orientation|keyboardHidden|screenSize"
-            android:screenOrientation="portrait">
+            >
+             <!--  android:screenOrientation="portrait"--> 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
