--- a/doarSP_Service/doarSP_Service/doarSP_Service.csproj
+++ b/doarSP_Service/doarSP_Service/doarSP_Service.csproj
@@ -76,6 +76,7 @@
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Properties\PublishProfiles\doarSP.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
