--- a/doarSP/AndroidManifest.xml
+++ b/doarSP/AndroidManifest.xml
@@ -13,6 +13,25 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <permission android:name="com.app.doarsp.permission.C2D_MESSAGE" android:protectionLevel="signature" />
+    <uses-permission android:name="com.app.doarsp.permission.C2D_MESSAGE" />
+    
+     <!-- App receives GCM messages. -->
+     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+     <!-- GCM connects to Google Services. -->
+     <uses-permission android:name="android.permission.INTERNET" />
+     <!-- GCM requires a Google account. -->
+     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+     <!-- Keeps the processor from sleeping when a message is received. -->
+     <uses-permission android:name="android.permission.WAKE_LOCK" />
+     
+         <!-- BroadcastReceiver. -->
+     
+     
+     
+     
+           
+     
 
     <!-- Localização atual -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -26,6 +45,7 @@
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="17" />
+    <uses-permission android:name="android.permission.VIBRATE"/>
 
     <application
         android:allowBackup="true"
@@ -48,7 +68,17 @@
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyC7SiK5PIlfMUOgrT1D_eIyHZ5Rrxkbj6U" />
-        <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version"/>        
+        <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version"/>  
+        <receiver android:name="com.google.android.gcm.GCMBroadcastReceiver"
+		     android:permission="com.google.android.c2dm.permission.SEND" >
+		     <intent-filter>
+		     <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+		     <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
+		     <category android:name="com.app.doarsp" />
+		     </intent-filter>    
+     	</receiver>      
+     	<!-- Add service Intent. -->
+     	<service android:name=".GCMIntentService" />        
     </application>
 
 </manifest>
