--- a/doarSP_Service/doarSP_Service/doarSP_Service.csproj
+++ b/doarSP_Service/doarSP_Service/doarSP_Service.csproj
@@ -70,6 +70,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\calcDistance.cs" />
+    <Compile Include="Utils\NotificacaoPush.cs" />
     <Compile Include="Utils\SendEmail.cs" />
   </ItemGroup>
   <ItemGroup>
