--- a/doarSP/bin/AndroidManifest.xml
+++ b/doarSP/bin/AndroidManifest.xml
@@ -19,7 +19,6 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
-
     <permission android:name="com.app.gcm.permission.C2D_MESSAGE"
         android:protectionLevel="signature" />
     <uses-permission android:name="com.app.gcm.permission.C2D_MESSAGE" />
@@ -45,14 +44,14 @@
         
         <!-- GCM -->
         <receiver
-            android:name=".GcmBroadcastReceiver"
+            android:name="com.app.gcm.GcmBroadcastReceiver"
             android:permission="com.google.android.c2dm.permission.SEND" >
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
                 <category android:name="com.app.gcm" />
             </intent-filter>
         </receiver>
-        <service android:name=".GcmIntentService" />
+        <service android:name="com.app.gcm.GcmIntentService" />
 
         <meta-data android:name="com.google.android.gms.version"
            android:value="@integer/google_play_services_version" />
