--- a/doarSP/AndroidManifest.xml
+++ b/doarSP/AndroidManifest.xml
@@ -14,6 +14,9 @@
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     
+    <!-- Permissão para iniciar o serviço após reiniciar o dispositivo -->
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    
     <!-- GCM -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
@@ -40,7 +43,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme" >       
         
         <!-- GCM -->
         <receiver
@@ -48,11 +51,26 @@
             android:permission="com.google.android.c2dm.permission.SEND" >
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+                <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
                 <category android:name="com.app.gcm" />
             </intent-filter>
         </receiver>
         <service android:name="com.app.gcm.GcmIntentService" />
-
+		<!-- Fim GCM -->
+		
+		<!-- Location Service -->
+        <receiver android:name="com.app.services.ServiceReceiver"/>
+        <service android:name="com.app.services.UpdateLocation" android:enabled="true" />
+        
+        <!-- Não vai ser chamado a não ser que a aplicação chame -->
+        <receiver android:name="com.app.services.DeviceBootReceiver"
+            android:enabled="true">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+            </intent-filter>
+        </receiver>
+        <!-- Fim Location Service -->
+        
         <meta-data android:name="com.google.android.gms.version"
            android:value="@integer/google_play_services_version" />
         <activity
@@ -63,10 +81,10 @@
              <!--  android:screenOrientation="portrait"--> 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
         <!-- Chave da API -->
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
