--- a/doarSP_Service/doarSP_Service/doarSP_Service.csproj
+++ b/doarSP_Service/doarSP_Service/doarSP_Service.csproj
@@ -55,6 +55,7 @@
     <Content Include="doarsp.asmx" />
     <Content Include="Utils\htmlContent.htm" />
     <Content Include="Web.config" />
+    <Content Include="WebForm1.aspx" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DAO\DoacoesDAO.cs" />
@@ -72,6 +73,13 @@
     <Compile Include="Utils\calcDistance.cs" />
     <Compile Include="Utils\NotificacaoPush.cs" />
     <Compile Include="Utils\SendEmail.cs" />
+    <Compile Include="WebForm1.aspx.cs">
+      <DependentUpon>WebForm1.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="WebForm1.aspx.designer.cs">
+      <DependentUpon>WebForm1.aspx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
