--- a/doarSP/AndroidManifest.xml
+++ b/doarSP/AndroidManifest.xml
@@ -51,6 +51,7 @@
             android:permission="com.google.android.c2dm.permission.SEND" >
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+                <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
                 <category android:name="com.app.gcm" />
             </intent-filter>
         </receiver>
@@ -70,8 +71,6 @@
         </receiver>
         <!-- Fim Location Service -->
         
-        <meta-data android:name="com.google.android.gms.version"
-           android:value="@integer/google_play_services_version" />
         <activity
             android:name="com.app.doarsp.MainActivity"
             android:label="@string/app_name" 
